<resources>
    <string name="app_name">Forest Rover</string>
    <string name="on_senond_activity">on senond Activity</string>
    <string name="by_susmit">By SUSMIT</string>
    <string name="hello_there_welcome_back">Hello There! Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">New User? Sign up</string>
    <string name="go">GO</string>
    <string name="sign_in">sign in</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone_no">Phone No.</string>
    <string name="password2">Password</string>
    <string name="full_name">Full Name</string>
    <string name="username1">Username</string>
    <string name="email_id">Email Id</string>
    <string name="sign_up_to_get_crazy_ideas">Sign Up to get Crazy Ideas</string>
    <string name="welcome">WELCOME,</string>
    <string name="susmit_rudra">SUSMIT RUDRA</string>
    <string name="susmit10">susmit10</string>
    <string name="update">UPDATE</string>
    <string name="verify_phone_no">Verify Phone No</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter verification code if not automatically authenticated.</string>
    <string name="provide_your_account_details_for_which_you_want_to_reset_your_password">Provide your account details for which you want to reset your password</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="select_which_contact_detail_we_should_use_to_reset_your_password">Select which contact detail we should use to reset your password</string>
    <string name="new_n_credentials">New \n Credentials</string>
    <string name="password_nupdated">Password\nUpdated</string>
    <string name="provide_your_account_s_phone_no_for_which_you_want_to_reset_your_password">Provide your account\'s Phone No. for which you want to reset your password</string>
    <string name="enter_your_phone_no">Enter your Phone No.</string>
    <string name="forgot_npassword">Forgot\nPassword</string>
    <string name="next">Next</string>
    <string name="provide_your_account_s_email_id_for_which_you_want_to_reset_your_password">Provide your account\'s Email Id for which you want to reset your password</string>
    <string name="enter_your_email_id">Enter your Email Id</string>
    <string name="via_mail">Via mail</string>
    <string name="via_sms">Via sms</string>
    <string name="make_nselection">Make\nSelection</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_identity_has_been_verified_n_set_your_new_password">Your identity has been verified! \n Set your new password</string>
    <string name="login">Login</string>
    <string name="susmitjuee10_gmail_com">susmitjuee10@gmail.com</string>
    <string name="sign_in_with_google_accounts">Sign-In with Google Accounts</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="forest_rover_robobeasts">Forest Rover - Robobeasts</string>
    <string name="logout">Logout</string>
    <string name="lets_get_started">lets get started</string>
    <string name="para1">This app allows us to reduce the risk of Forest Fires to a great extent.</string>
    <string name="para2">A Spark can set the whole forest in fire. Just a Spark! Save it!</string>
    <string name="para3">Nature is not a place to visit. Its a Home!</string>
    <string name="para4">Let us take a step forward to save the lives of the animals from Forest Fire.</string>
    <string name="heading1">Forest Rover</string>
    <string name="heading2">Forest Rover 1</string>
    <string name="heading3">Forest Rover 2</string>
    <string name="heading4">Forest Rover 3</string>
    <string name="skip">Skip</string>
    <string name="search">Search...</string>
    <string name="maximum_values">Maximum values</string>
    <string name="graphical_analysis">Graphical Analysis</string>
    <string name="view_all">View all</string>
    <string name="maximum_ntemperature">Maximum\nTemperature</string>


    <!--      Menu Names      -->
    <string name="home">HOME</string>
    <string name="_search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>

    <string name="_login">Login</string>
    <string name="profile">Profile</string>
    <string name="_logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="slogan">A Spark can set the whole forest in fire\nJust a Spark! Save it!</string>
    <string name="categories">Categories</string>
    <string name="fire">Fire</string>
    <string name="rain">Rain</string>
    <string name="smoke">Smoke</string>
    <string name="temp">Temp</string>
    <string name="expand_all">Expand all</string>
    <string name="sensor_values">Sensor Values</string>
    <string name="graphical_nanalysis">Graphical\nAnalysis</string>
    <string name="current_value">Current Value</string>
    <string name="max_value">Max. Value</string>
    <string name="remember_me">Remember Me</string>
    <string name="fire_graph">Fire Graph</string>
    <string name="rain_graph">Rain Graph</string>
    <string name="smoke_graph">Smoke Graph</string>
    <string name="temperature_graph">Temperature Graph</string>
    <string name="rover_ncontrolling">Rover\nControlling</string>
    <string name="expand">Expand</string>
    <string name="flame_nsensor">Flame\nSensor</string>
    <string name="rain_nsensor">Rain\nSensor</string>
    <string name="smoke_nsensor">Smoke\nSensor</string>
    <string name="temp_nsensor">Temp.\nSensor</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="pir_nsensor">PIR\nSensor</string>
    <string name="humidity_nsensor">Humidity\nSensor</string>
    <string name="pir_graph">Pir Graph</string>
    <string name="humidity_graph">Humidity Graph</string>
    <string name="select_mode">Select Mode</string>
    <string name="autonomous_nmode">Autonomous\nMode</string>
    <string name="desc1">In this mode the rover will find its path automatically in the forest.</string>
    <string name="manual_ncontrolling">Manual\nControlling</string>
    <string name="desc2">In this mode we will manually control the rover inside the forest.</string>
    <string name="humidity">Humidity</string>
    <string name="pir">PIR</string>

</resources>