<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".login.Login">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/logo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000"
        android:textSize="40sp"
        android:transitionName="slogan_text" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/sign_in_to_continue"
        android:textColor="#027497"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_centerVertical="true"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/textButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentEnd="true"
                android:background="#00000000"
                android:elevation="3dp"
                android:text="@string/forgot_password" />

        </RelativeLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/go"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="3dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/new_user_sign_up"
            android:textFontWeight="500" />




    </LinearLayout>


</LinearLayout>