<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10sp"
            android:src="@drawable/firebrigadelogo"
            android:transitionName="logo_image" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:fontFamily="@font/bungee"
            android:text="@string/welcome"
            android:textColor="#000"
            android:textSize="40sp"
            android:transitionName="slogan_text" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/sign_up_to_get_crazy_ideas"
            android:textColor="#027497"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username1"
                android:transitionName="username"
                app:counterEnabled="false"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="#fece2f"
                android:padding="7dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_flagBorderColor="#000"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:transitionName="password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signupbtn"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#000"
            android:onClick="btnClick"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="mainbtn" />


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:gravity="center"
            android:onClick="test"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="otherbtn" />

    </LinearLayout>


</ScrollView>