<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword.ForgetPasswordOnEmailSelection"
    android:padding="20dp"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/forget_password_back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="callBackScreenFromForgetPasswordOnEmailSelection"
            android:padding="0dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="#000"/>


        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/forget_password_icon" />


        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/forgot_npassword"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/provide_your_account_s_email_id_for_which_you_want_to_reset_your_password"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="17sp"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/enter_your_email_id"
            android:textColorHint="#000"
            app:boxBackgroundColor="#C1C0C0"
            app:boxStrokeColor="#000"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="#000"
            app:hintTextColor="#000"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="#000"
            app:endIconCheckable="true"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bungee"
                android:inputType="textEmailAddress"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textCursorDrawable="@null" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forget_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#fece2f"
            android:onClick="verifyEmail"
            android:text="@string/next"
            android:fontFamily="@font/bungee"
            android:textSize="18sp"
            android:textColor="#000" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            />


    </LinearLayout>

</ScrollView>