<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#fece2f"
        android:padding="20dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="-10dp"
            android:src="@mipmap/profile_photo"
            app:civ_border_color="#03196E"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="10dp" />

        <TextView

            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_image"
            android:fontFamily="@font/bungee"
            android:layout_marginTop="40dp"
            android:includeFontPadding="false"
            android:text="@string/susmit_rudra"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/profile_image"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:text="@string/susmit10"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:padding="20dp"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FAC824"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/card_logo2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/firebrigade_logo" />

                <TextView
                    android:id="@+id/payment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/card_logo2"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/muli_black"
                    android:includeFontPadding="false"
                    android:text="Last Checked"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/payment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/payment_label"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bungee"
                    android:layout_marginTop="5dp"
                    android:includeFontPadding="false"
                    android:text="5:24 pm"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FAC824"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/card_logo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/firebrigade_logo" />

                <TextView
                    android:id="@+id/points_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_logo"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/muli_black"
                    android:includeFontPadding="false"
                    android:text="Danger Alerts"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/points_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/points_label"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/bungee"
                    android:text="1"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-20dp"
        android:padding="20dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_Code_Picker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/black_border"
            app:ccp_autoDetectCountry="true"
            android:padding="3dp"
            app:ccp_flagBorderColor="#000"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_action_name"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fece2f"
                android:fontFamily="@font/bungee"
                android:text="@string/update"
                android:onClick="update"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#A8A8A8"
                android:fontFamily="@font/bungee"
                android:text="@string/logout"
                android:onClick="logout"/>


        </LinearLayout>



    </LinearLayout>

    </LinearLayout>

</ScrollView>
